2010-06-12  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Report.pm: POD overhaul

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader-test.c: don't expect partnum=0 on dumpfiles
	* common-src/fileheader.c: don't put partnum=1 on tape headers, etc.

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader.c: fix inaccurate partnum in such headers
	* installcheck/Amanda_Recovery_Clerk.pl: add test for recovering with
	  DUMPFILE headers

2010-06-11  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/s3-device.c: add S3_STORAGE_CLASS property
	* device-src/s3.c device-src/s3.h: add storage_class
	* installcheck/Amanda_Device.pl: set the property
	* man/xml-source/amanda-devices.7.xml: document it

2010-06-10  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Amanda/Recovery/Planner.pm: fix matching on filelists - fixes
	  problems with amidxtaped: "Specified file list matches multiple
	  dumps"

2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Set dump_failed and dump_strange flags.
	* server-src/amreport.pl: Add STRANGE or MISSING to email subject.
	* installcheck/Amanda_Report.pl: Test new flags.

2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report.pm: Rename 'tries' to 'dumps', it is a hash of
	  timestamps, each value is an array of try.
	* perl/Amanda/Report/human.pm: Use 'dumps'.
	* perl/Amanda/Report/postscript.pm: Use 'dumps'.
	* perl/Amanda/Report/xml.pm: Use 'dumps'.
	* contrib/amreport.rnc: Add 'dumps'
	* server-src/amreport.pl: Use 'dumps'
	* installcheck/amreport.pl: Check 'dumps'
	* installcheck/Amanda_Report.pl: Check 'dumps'

2010-06-09 Dan Locks <dwlocks@zmanda.com>
	*  packaging/rpm/amanda.spec: remove Provides from main section,
	   remove amanda-client from server provides section.

2010-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm (check_data_path): New method to check
	  the data_path.